update from laptop

--- a/Chrome/ezman_updater/popup.html
+++ b/Chrome/ezman_updater/popup.html
@@ -15,9 +15,10 @@
 <br />
 <span>Failed</span>
 <input type="radio" name="cases_status" value="Failed" />
-<button id='test_button'>test</button>
 <br />
 <input id='upgrade_page' type='button' name='upgrade_page' value='upgrade page'>
+<br />
+<input id='test_button' type='button' name='test_button' value='test'>
 </form>
 </body>
 </html>
