--- a/Chrome/ezman_updater/popup.html
+++ b/Chrome/ezman_updater/popup.html
@@ -19,9 +19,10 @@
 <span>Do not update</span>
 <input type="radio" name="cases_status" value="null" />
 <br />
+<br />
 <input id='upgrade_page' type='button' name='upgrade_page' value='upgrade page'>
 <br />
-<input id='test_button' type='button' name='test_button' value='test'>
+<input id='test' type='button' name='test' value='test'>
 </form>
 </body>
 </html>
