--- a/Chrome/ezman_updater/popup.html
+++ b/Chrome/ezman_updater/popup.html
@@ -23,6 +23,8 @@
 <input id='upgrade_page' type='button' name='upgrade_page' value='upgrade page'>
 <br />
 <input id='test' type='button' name='test' value='test'>
+<br />
+<input id='test2' type='button' name='test2' value='test2'>
 </form>
 </body>
 </html>
