--- a/Chrome/ezman_updater/popup.html
+++ b/Chrome/ezman_updater/popup.html
@@ -11,20 +11,18 @@
 <span>Status:</span>
 <br />
 <span>Passed</span>
-<input type="radio" checked="checked" name="cases_status" value="Passed" />
+<input type="radio" name="cases_status" value="Passed" />
 <br />
 <span>Failed</span>
 <input type="radio" name="cases_status" value="Failed" />
 <br />
 <span>Do not update</span>
-<input type="radio" name="cases_status" value="null" />
+<input type="radio" checked="checked" name="cases_status" value="null" />
 <br />
 <br />
 <input id='upgrade_page' type='button' name='upgrade_page' value='upgrade page'>
 <br />
-<input id='test' type='button' name='test' value='test'>
-<br />
-<input id='test2' type='button' name='test2' value='test2'>
+<input id='test' type='button' name='test' value='test page'>
 </form>
 </body>
 </html>
