--- a/Chrome/ezman_updater/options.html
+++ b/Chrome/ezman_updater/options.html
@@ -2,15 +2,16 @@
 <head>
 <script src='jquery-3.1.1.js'></script>
 <script src='options.js'></script>
+<link rel='stylesheet' type='text/css' href='option.css' />
 </head>
 <body>
 <form>
-<div id = 'display_area1'></div>
-<br />
+<table id = 'display_area1'></table>
+<div id = 'button_area'>
 <input id='check_url_array' type='button' name='check_url_array' value='check update urls array'>
 <br />
-<br />
 <input id='clear_url_array' type='button' name='clear_url_array' value='clear update urls array'>
+</div>
 </form>
 </body>
 </html>
