--- a/Chrome/ezman_updater/options.html
+++ b/Chrome/ezman_updater/options.html
@@ -5,7 +5,7 @@
 <link rel='stylesheet' type='text/css' href='option.css' />
 </head>
 <body>
-<form>
+<form id = 'function_area1'>
 <table id = 'display_area1'></table>
 <div id = 'button_area'>
 <input id='check_url_array' type='button' name='check_url_array' value='check update urls array'>
