--- a/Chrome/ezman_updater/popup.html
+++ b/Chrome/ezman_updater/popup.html
@@ -23,9 +23,9 @@
 <input type='radio' checked='checked' name='cases_status' value='null' />
 </div>
 <div id='button_area'>
-<input id='upgrade_page' type='button' name='upgrade_page' value='upgrade page'>
+<input id='upgrade_page' type='button' name='upgrade_page' value='update page'>
 <br/>
-<input id='upgrade_all_pages' type='button' name='upgrade_all_pages' value='upgrade all pages'>
+<input id='upgrade_all_pages' type='button' name='upgrade_all_pages' value='update all pages'>
 </div>
 </form>
 </body>
