--- a/Chrome/ezman_updater/popup.html
+++ b/Chrome/ezman_updater/popup.html
@@ -26,6 +26,8 @@
 <input id='upgrade_page' type='button' name='upgrade_page' value='update page'>
 <br/>
 <input id='upgrade_all_pages' type='button' name='upgrade_all_pages' value='update all pages'>
+<br/>
+<input id='test' type='button' name='test' value='test'>
 </div>
 </form>
 </body>
