--- a/Chrome/ezman_updater/options.html
+++ b/Chrome/ezman_updater/options.html
@@ -10,7 +10,7 @@
 <div id = 'button_area'>
 <input id='check_url_array' type='button' name='check_url_array' value='check update urls array'>
 <br />
-<input id='clear_url_array' type='button' name='clear_url_array' value='clear update urls array'>
+<input id='reset_all_parameter' type='button' name='reset_all_parameter' value='reset all parameter'>
 </div>
 </form>
 </body>
