--- a/Java/hello/test-output/index.html
+++ b/Java/hello/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\i067382\AppData\Local\Temp\testng-eclipse--1140469676\testng-customsuite.xml</span>
+                    <span>C:\Users\i067382\AppData\Local\Temp\testng-eclipse--954048346\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.andy.hello.FindDuplicateTest" hash-for-method="findDuplicate">findDuplicate</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.andy.hello.TestPermissionTest" hash-for-method="f">f</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.andy.hello.FindDuplicateTest</span>
+              <span class="class-name">test.andy.hello.TestPermissionTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="findDuplicate">
-                  </a> <!-- findDuplicate -->
-                  <span class="method-name">findDuplicate</span>
+                  <a name="f">
+                  </a> <!-- f -->
+                  <span class="method-name">f</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\i067382\AppData\Local\Temp\testng-eclipse--1140469676\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\i067382\AppData\Local\Temp\testng-eclipse--954048346\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.andy.hello.FindDuplicateTest&quot;/&gt;
+      &lt;class name=&quot;test.andy.hello.TestPermissionTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,8 +186,8 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'findDuplicate')
-data.setCell(0, 2, 'test.andy.hello.FindDuplicateTest')
+data.setCell(0, 1, 'f')
+data.setCell(0, 2, 'test.andy.hello.TestPermissionTest')
 data.setCell(0, 3, 18);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
@@ -219,9 +219,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.andy.hello.FindDuplicateTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.andy.hello.TestPermissionTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">findDuplicate</span>
+                <span class="method-name">f</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
