--- a/Java/hello/test-output/old/Default suite/methods-alphabetical.html
+++ b/Java/hello/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6fb494">  <td>17/08/24 22:58:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HouseRobberTest.houseRobber()[pri:0, instance:test.andy.hello.HouseRobberTest@7f560810]">houseRobber</td> 
+<tr bgcolor="6fb494">  <td>17/09/14 22:21:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CanPartitionTest.canPartition()[pri:0, instance:test.andy.hello.CanPartitionTest@7f560810]">canPartition</td> 
   <td>main@1935365522</td>   <td></td> </tr>
 </table>
