--- a/Java/hello/test-output/index.html
+++ b/Java/hello/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\i067382\AppData\Local\Temp\testng-eclipse--316981929\testng-customsuite.xml</span>
+                    <span>C:\Users\i067382\AppData\Local\Temp\testng-eclipse-2089224869\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.andy.hello.CanPartitionTest" hash-for-method="canPartition">canPartition</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.andy.hello.SortTest" hash-for-method="quickSort">quickSort</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.andy.hello.CanPartitionTest</span>
+              <span class="class-name">test.andy.hello.SortTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="canPartition">
-                  </a> <!-- canPartition -->
-                  <span class="method-name">canPartition</span>
+                  <a name="quickSort">
+                  </a> <!-- quickSort -->
+                  <span class="method-name">quickSort</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\i067382\AppData\Local\Temp\testng-eclipse--316981929\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\i067382\AppData\Local\Temp\testng-eclipse-2089224869\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.andy.hello.CanPartitionTest&quot;/&gt;
+      &lt;class name=&quot;test.andy.hello.SortTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'canPartition')
-data.setCell(0, 2, 'test.andy.hello.CanPartitionTest')
-data.setCell(0, 3, 27);
+data.setCell(0, 1, 'quickSort')
+data.setCell(0, 2, 'test.andy.hello.SortTest')
+data.setCell(0, 3, 19);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 ms</span>
+              <span class="suite-total-time">Total running time: 19 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,9 +219,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.andy.hello.CanPartitionTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.andy.hello.SortTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">canPartition</span>
+                <span class="method-name">quickSort</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
